syntax = "proto3";

package time;
option go_package = "https://github.com/Philtoft/DISYS-Mini-Project-2-Chitty-Chat;time";

service getCurrentTime {
    rpc getTime (GetTimeRequest) returns (GetTimeReply) {}
}

message GetTimeRequest {}

message GetTimeReply {
    string reply = 1;
}



service Chat {
    // Sends a chat
    rpc Broadcast (ChatRequest) returns (ChatResponse);
}

message ChatRequest {
    string message = 1;
}

message ChatResponse {
    string message = 1;
}